@@ -6,7 +6,6 @@
 package io.stackgres.operator.conciliation.factory.cluster.patroni;
 
 import static io.stackgres.common.StackGresUtil.getPostgresFlavorComponent;
-import static io.stackgres.operator.conciliation.factory.cluster.patroni.PatroniConfigMap.PATRONI_RESTAPI_PORT_NAME;
 
 import java.util.List;
 import java.util.Map;
@@ -16,13 +15,13 @@ import java.util.stream.Stream;
 import javax.inject.Inject;
 import javax.inject.Singleton;
 
-import com.google.common.collect.ImmutableList;
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.api.model.IntOrString;
 import io.fabric8.kubernetes.api.model.Service;
 import io.fabric8.kubernetes.api.model.ServiceBuilder;
 import io.fabric8.kubernetes.api.model.ServicePortBuilder;
 import io.stackgres.common.ClusterContext;
+import io.stackgres.common.EnvoyUtil;
 import io.stackgres.common.LabelFactoryForCluster;
 import io.stackgres.common.PatroniUtil;
 import io.stackgres.common.StackGresComponent;
@@ -45,8 +44,6 @@ public class PatroniServices implements
     ResourceGenerator<StackGresClusterContext> {
 
   private static final String NO_CLUSTER_IP = "None";
-
-  public static final int PATRONI_SERVICE_PORT = 8008;
 
   private LabelFactoryForCluster<StackGresCluster> labelFactory;
 
@@ -96,23 +93,21 @@ public class PatroniServices implements
   }
 
   private boolean isReplicaServiceEnabled(final StackGresCluster cluster) {
-    boolean isReplicaServiceEnabled = Optional.of(cluster)
+    return Optional.of(cluster)
         .map(StackGresCluster::getSpec)
         .map(StackGresClusterSpec::getPostgresServices)
         .map(StackGresClusterPostgresServices::getReplicas)
         .map(StackGresPostgresService::getEnabled)
         .orElse(true);
-    return isReplicaServiceEnabled;
   }
 
   private boolean isPrimaryServiceEnabled(final StackGresCluster cluster) {
-    boolean isPrimaryServiceEnabled = Optional.of(cluster)
+    return Optional.of(cluster)
         .map(StackGresCluster::getSpec)
         .map(StackGresClusterSpec::getPostgresServices)
         .map(StackGresClusterPostgresServices::getPrimary)
         .map(StackGresPostgresService::getEnabled)
         .orElse(true);
-    return isPrimaryServiceEnabled;
   }
 
   private Service createConfigService(String namespace, String serviceName,
@@ -142,9 +137,9 @@ public class PatroniServices implements
         .withPorts(
             new ServicePortBuilder()
                 .withProtocol("TCP")
-                .withName(PATRONI_RESTAPI_PORT_NAME)
-                .withPort(PATRONI_SERVICE_PORT)
-                .withTargetPort(new IntOrString(PATRONI_RESTAPI_PORT_NAME))
+                .withName(EnvoyUtil.PATRONI_RESTAPI_PORT_NAME)
+                .withPort(EnvoyUtil.PATRONI_ENTRY_PORT)
+                .withTargetPort(new IntOrString(EnvoyUtil.PATRONI_RESTAPI_PORT_NAME))
                 .build())
         .withSelector(labelFactory.patroniClusterLabels(cluster))
         .withType(StackGresPostgresServiceType.CLUSTER_IP.toString())
@@ -166,22 +161,22 @@ public class PatroniServices implements
         .withPorts(
             new ServicePortBuilder()
                 .withProtocol("TCP")
-                .withName(PatroniConfigMap.POSTGRES_PORT_NAME)
+                .withName(EnvoyUtil.POSTGRES_PORT_NAME)
                 .withPort(PatroniUtil.POSTGRES_SERVICE_PORT)
-                .withTargetPort(new IntOrString(PatroniConfigMap.POSTGRES_PORT_NAME))
+                .withTargetPort(new IntOrString(EnvoyUtil.POSTGRES_PORT_NAME))
                 .build(),
             new ServicePortBuilder()
                 .withProtocol("TCP")
-                .withName(PatroniConfigMap.POSTGRES_REPLICATION_PORT_NAME)
+                .withName(EnvoyUtil.POSTGRES_REPLICATION_PORT_NAME)
                 .withPort(PatroniUtil.REPLICATION_SERVICE_PORT)
-                .withTargetPort(new IntOrString(PatroniConfigMap.POSTGRES_REPLICATION_PORT_NAME))
+                .withTargetPort(new IntOrString(EnvoyUtil.POSTGRES_REPLICATION_PORT_NAME))
                 .build())
         .addAllToPorts(Seq.of(
             new ServicePortBuilder()
                 .withProtocol("TCP")
-                .withName(PatroniConfigMap.BABELFISH_PORT_NAME)
+                .withName(EnvoyUtil.BABELFISH_PORT_NAME)
                 .withPort(PatroniUtil.BABELFISH_SERVICE_PORT)
-                .withTargetPort(new IntOrString(PatroniConfigMap.BABELFISH_PORT_NAME))
+                .withTargetPort(new IntOrString(EnvoyUtil.BABELFISH_PORT_NAME))
                 .build())
             .filter(
                 servicePort -> getPostgresFlavorComponent(cluster) == StackGresComponent.BABELFISH)
@@ -193,12 +188,11 @@ public class PatroniServices implements
   }
 
   private Map<String, String> getPrimaryServiceAnnotations(StackGresCluster cluster) {
-    Map<String, String> annotations = Optional.ofNullable(cluster.getSpec())
+    return Optional.ofNullable(cluster.getSpec())
         .map(StackGresClusterSpec::getMetadata)
         .map(StackGresClusterSpecMetadata::getAnnotations)
         .map(StackGresClusterSpecAnnotations::getPrimaryService)
         .orElse(Map.of());
-    return annotations;
   }
 
   private List<String> getPrimaryExternalIps(StackGresCluster cluster) {
@@ -206,7 +200,7 @@ public class PatroniServices implements
         .map(StackGresClusterSpec::getPostgresServices)
         .map(StackGresClusterPostgresServices::getPrimary)
         .map(StackGresPostgresService::getExternalIPs)
-        .orElse(ImmutableList.of());
+        .orElse(List.of());
   }
 
   private String getPrimaryServiceType(StackGresCluster cluster) {
@@ -268,22 +262,22 @@ public class PatroniServices implements
         .withSelector(replicaLabels)
         .withPorts(new ServicePortBuilder()
             .withProtocol("TCP")
-            .withName(PatroniConfigMap.POSTGRES_PORT_NAME)
+            .withName(EnvoyUtil.POSTGRES_PORT_NAME)
             .withPort(PatroniUtil.POSTGRES_SERVICE_PORT)
-            .withTargetPort(new IntOrString(PatroniConfigMap.POSTGRES_PORT_NAME))
+            .withTargetPort(new IntOrString(EnvoyUtil.POSTGRES_PORT_NAME))
             .build(),
             new ServicePortBuilder()
                 .withProtocol("TCP")
-                .withName(PatroniConfigMap.POSTGRES_REPLICATION_PORT_NAME)
+                .withName(EnvoyUtil.POSTGRES_REPLICATION_PORT_NAME)
                 .withPort(PatroniUtil.REPLICATION_SERVICE_PORT)
-                .withTargetPort(new IntOrString(PatroniConfigMap.POSTGRES_REPLICATION_PORT_NAME))
+                .withTargetPort(new IntOrString(EnvoyUtil.POSTGRES_REPLICATION_PORT_NAME))
                 .build())
         .addAllToPorts(Seq.of(
             new ServicePortBuilder()
                 .withProtocol("TCP")
-                .withName(PatroniConfigMap.BABELFISH_PORT_NAME)
+                .withName(EnvoyUtil.BABELFISH_PORT_NAME)
                 .withPort(PatroniUtil.BABELFISH_SERVICE_PORT)
-                .withTargetPort(new IntOrString(PatroniConfigMap.BABELFISH_PORT_NAME))
+                .withTargetPort(new IntOrString(EnvoyUtil.BABELFISH_PORT_NAME))
                 .build())
             .filter(
                 servicePort -> getPostgresFlavorComponent(cluster) == StackGresComponent.BABELFISH)
@@ -304,12 +298,11 @@ public class PatroniServices implements
   }
 
   private String getReplicasServiceType(StackGresCluster cluster) {
-    String serviceType = Optional.ofNullable(cluster.getSpec())
+    return Optional.ofNullable(cluster.getSpec())
         .map(StackGresClusterSpec::getPostgresServices)
         .map(StackGresClusterPostgresServices::getReplicas)
         .map(StackGresPostgresService::getType)
         .orElse(StackGresPostgresServiceType.CLUSTER_IP.toString());
-    return serviceType;
   }
 
   private List<String> getReplicasExternalIPs(StackGresCluster cluster) {
@@ -317,7 +310,7 @@ public class PatroniServices implements
         .map(StackGresClusterSpec::getPostgresServices)
         .map(StackGresClusterPostgresServices::getReplicas)
         .map(StackGresPostgresService::getExternalIPs)
-        .orElse(ImmutableList.of());
+        .orElse(List.of());
   }
 
   @Inject
